--- a/postgres/dbt_project.yml
+++ b/postgres/dbt_project.yml
@@ -2,11 +2,11 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'data_transform'
+name: 'postgres'
 version: '1.0.0'
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'data_transform'
+profile: 'postgres'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -30,6 +30,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  data_transform:
-    raw_data:  # Specify the model explicitly if needed
-      +materialized: view  # or table if you want a table instead of a view
+  postgres:
+    # Config indicated by + and applies to all files under models/example/
+    example:
+      +materialized: view
